src/index.css
@import url("https://fonts.cdnfonts.com/css/larke-neue");

* {
  margin: 0;
  font-family: "Larke Neue Thin", "Roboto", "Arial", sans-serif;
}
.bold-text {
  font-weight: 100;
}
.divider {
  border-top: 1.5px solid hsla(50,3%,47%,.5);
  padding-top: 3em;
}
a {
  color: var(--link-color);
}
h1 {
  font-size: 3.125rem;
  line-height: 122%;
}
h2 {
  font-size: 30px;
  font-weight: 600;
  margin-bottom: 1rem;
}
body, h1, h2, h3, h4, h5, h6, p {
  margin: 0;
  padding: 0;
}
p {
  display: block;
  margin-block-start: 1em;
  margin-block-end: 1em;
  margin-inline-start: 0px;
  margin-inline-end: 0px;
}
section {
  margin-bottom: 4em;
}
/* NAVIGATION BAR */
.navbar {
  display: flex;
  align-items: center;
  max-width: none;
  margin: 0 auto;
  padding: 2em 0;
  height: 3em;
  width: 80%;
}
.navbar .logo {
  margin-left: 0;
  padding-left: 0;
}
.navbar .links {
  margin-left: auto;

}
.navbar a {
  margin-left: 3em;
  text-decoration: none;
  padding: 6px;
}
.navbar a:hover {
  color: #6a9b8f;
}
.content {
  max-width: 600px;
  margin: 40px auto;
  padding: 20px;
}

/* HOME PAGE */
.home {
  margin: 0 auto 5rem;
  width: 80%;
}
.home .flex {
  display: flex;
  flex-direction: row;
  gap: 6rem;
  /* padding-bottom: 2em; */
}
.left {
  flex: 4;
}
/* .title .description .small-paragraph {
  color: rgba(51,51,51,.5);
} */
.descr-contain p, .overview p {
  margin-bottom: 1rem;
  font-size: 22px;
}
@keyframes fadeIn {
  0% {opacity: 0;}
  100% {opacity: 1;}
}
.highlight {
  font-weight: bold;
  color: #6a9b8f; 
  animation: fadeIn 2s ease-in-out 1; 
}
.highlight2 {
  font-weight: 900;
  color: rgb(51, 116, 149); 
  /* animation: fadeIn 2s ease-in-out 1;  */
}
.right {
  flex: 2; 
}
.contact-contain {
  background-color: #cccccc; 
  border-radius: 2rem;
  box-shadow: 0 10px 30px -10px rgba(0,0,0,.2); 
  flex-grow: 1;
  flex-shrink: 1;
  max-width: 60rem; 
  padding: 3rem; 
  transition: transform .3s ease-in-out; 
  will-change: transform; 
}
/* @media (prefers-color-scheme: dark) {
  #chat {
    color: black !important;
  }
} */
.contact-list {
  display: flex;
  justify-content: center;
}
.contact-list img {
  width: 3em;
  height: auto;
  padding: 30px;
  transition: opacity 0.3s ease;
}
.contact-list img:hover {
  opacity: 0.6;
}
/* PROJECTS */
#titles {
  padding-bottom: 1em;
}
.project-card-grid {
  display: grid;
  grid-template-columns: repeat(2, 1fr);
  gap: 20px;
}
.proj {
  height: 25em;
  width: 35em;
  position: relative;
  border-radius: 15px;
  overflow: hidden;
}
.proj img {
  width: 100%;
  height: 100%;
  object-fit: cover;
}
.card-overlay {
  position: absolute;
  top: 0;
  left: 0;
  width: 100%;
  height: 100%;
  background: rgba(0, 0, 0, 0.7);
  color: white;
  opacity: 0;
  transition: opacity 0.3s ease;
  padding: 20px;
  box-sizing: border-box;
  z-index: 1; /* Add this line */
}
.proj:hover .card-overlay {
  opacity: 0.8;
}
/* FOOTER */
footer {
  display: flex;
  justify-content: space-between;
  padding: 4em 0;
  width: 80%;
  margin: 0 auto;
}
.footer-section {
  width: 30%;
  display: flex;
  flex-direction: column;
  align-items: center;
  justify-content: center;
}
.footer-section h3 {
  margin-bottom: 15px;
}
.footer-section ul {
  list-style: none;
  padding: 0;
}
.footer-section ul li a {
  /* color: black; */
  text-decoration: none;
}
.footer-section ul li a:hover {
  color: #6a9b8f;
}
.footer-divider {
  border-top: 1px solid #ccc; /* Change color as needed */
  width: 80%;
  margin: 20px auto;
}
/* ABOUT PAGE */
.about {
  margin: 0 auto;
  width: 80%;
}
.about .flex {
  display: flex;
  flex-direction: row;
  gap: 6rem;
}
.about .right {
  max-width: 20rem;
}

.img-contain {
  align-content: center;
  display: flex;
  flex-direction: column;
  flex-wrap: wrap;
  gap: 2rem;
}
.img-contain img {
  border-radius: 15px;
  transition: all .3s ease-in-out;
  width: 18rem;
  /* flex-grow: 1;
  flex-shrink: 1;
  height: auto; */
}
.hobbies-contain {
  display: flex;
  flex-direction: column;
  align-items: stretch;
}
.hob {
  /* border: 1px solid #0000000f; */
  border-radius: 15px;
  margin: 10px 0;
  padding: 20px;
  box-sizing: border-box;
  display: flex;
  justify-content: center;
  position: relative;
}
.hob img, .hob p {
  position: relative; 
  z-index: 2; 
}
.hob::before {
  content: "";
  position: absolute;
  top: 0;
  left: 0;
  width: 100%;
  height: 100%;
  background-color: transparent; 
  transition: background-color 0.7s ease; 
  z-index: 1;
  border-radius: 15px;
}
.hob:hover::after {
  content: ""; 
  position: absolute;
  top: 50%;
  left: 50%;
  transform: translate(-50%, -50%); 
  color: #000;
  font-size: 20px;
  z-index: 2;
}
.hob:hover::before {
  background-color: rgba(50, 50, 50, 0.916); 
}
#foodie:hover::after {
  content: "I find joy in exploring the culinary landscape wherever I go, whenever I go. As a fellow Yelp Elite, I love to discover new hidden gems at renowned eateries, as each experience adds a flavorful chapter to my journey. Camera eats first!";
  color: white;
}
#cafe:hover::after {
  content: "I love to go cafe hopping. There's nothing like the smell of fresh tea and the ambiance of a cozy cafe to make my day. Whether it's for a quick pick-me-up or a leisurely afternoon, you'll often find me in local cafes in LA or OC, working or just catching up with some friends.";
  color: white;
}
#travel:hover::after {
  content: "Traveling is one of my passions. I love exploring new places, immersing myself in different cultures, and meeting people from all walks of life. Every journey brings with it a wealth of experiences and memories, and I can't wait for my next adventure.";
  color: white;
}
.hob img {
  border-radius: 15px;
  transition: all .3s ease-in-out;
  width: 15rem;
  margin: 0 auto;
  z-index: 0;
}

